[metadata]
name = ms_pred
version = 0.0.1
license = MIT
description = Mass spectra prediction from molecule inputs
long_description = file: README.md
#author = 
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =
#   numpy
#   pandas
#   joblib

#[options.extras_require]
#dev =
#    jupyterlab

[options.packages.find]
where=src

